# reflectable

./: .gitignore  CMakeLists.txt  README.md  packages.config  reflectable.sln  reflectable.vcxproj  reflectable.vcxproj.filters
example/: Source.cpp
inc/json/: json_serialization.h
inc/json/rapidjson/: filestream.h  reader.h  writer.h
inc/reflectable/: reflectable.h  reflectable_impl.h
inc/reflectable/boost/mpl/list/: list60.hpp  list70.hpp  list80.hpp
inc/reflectable/json/: json_serialization.h
inc/reflectable/json/rapidjson/: filestream.h  reader.h
inc/reflectable/reflectable/: reflectable_impl.h
